--- a/css/main.css
+++ b/css/main.css
@@ -337,25 +337,214 @@ template {
   display: none;
 }
 
+body {
+  font-family: "Open Sans", arial, sans-serif;
+}
+
 .container {
-  max-width: 1200px;
+  max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+a {
+  color: #083B87;
+  text-decoration: none;
+}
+
+.icon {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
+button {
+  border: none;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 40px;
+  color: white;
+  background-color: transparent;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
+.button-icon {
+  justify-content: center;
+  color: black;
+  padding-left: 0;
+  padding-right: 0;
+  width: 40px;
+}
+
+.button-blue {
+  color: white;
+  background-color: #01ACEE;
 }
 
 .Header {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #ddd;
+  height: 68px;
 }
 
 .Header .container {
+  position: relative;
   display: flex;
   align-items: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  height: 100%;
+}
+
+.Header-logo img {
+  width: 144px;
+}
+
+.Header-switch {
+  position: relative;
+  left: 10px;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .Header-switch {
+    display: none;
+  }
 }
 
 .Header-menu {
-  margin-left: auto;
+  pointer-events: none;
+  opacity: 0;
+  transition: .2s;
   display: flex;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
+}
+
+.Header.menu-show .Header-menu {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+@media (min-width: 768px) {
+  .Header-menu {
+    opacity: 1;
+    transform: translateY(0);
+    transition: 0s;
+    margin-left: auto;
+    flex-direction: row;
+    position: static;
+    box-shadow: none;
+    background-color: transparent;
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 0;
+  }
+}
+
+.Header-menu-user {
+  display: flex;
+  margin-right: 10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .Header-menu-user {
+    flex-direction: row;
+  }
+}
+
+.Header-menu-user a {
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 40px;
+}
+
+.Header-menu-user a:hover {
+  background-color: #eee;
+}
+
+.Header-menu-property {
+  margin-top: 20px;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .Header-menu-property {
+    margin-top: 0;
+  }
+}
+
+.Header-menu-helper {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .Header-menu-helper {
+    margin-left: 20px;
+    margin-top: 0;
+  }
+}
+
+.Header-menu-helper select {
+  appearance: none;
+  background-color: transparent;
+  border: 1px solid #E0E6F1;
+  padding-right: 10px;
+  padding-left: 10px;
+  border-radius: 0;
+  color: #083B87;
+  height: 40px;
+}
+
+.Header-menu-helper select:nth-child(1) {
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+}
+
+.Header-menu-helper select:nth-child(2) {
+  border-left-width: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+.Navigation {
+  height: 50px;
+  background-color: #F1F6FF;
+}
+
+.Navigation .container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+}
+
+.Navigation-item {
+  margin-right: 20px;
+  font-size: 0.86em;
 }
 /*# sourceMappingURL=main.css.map */
