--- a/scss/config/_variable.scss
+++ b/scss/config/_variable.scss
@@ -8,5 +8,6 @@ $font-size-small: .86em;
 $color-navy: #083B87;
 $color-blue: #01ACEE;
 $color-soft-blue: #F1F6FF;
+$color-yellow: #FBBE00;
 //
 $font-family: 'Open Sans', arial, sans-serif;
