--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,21 +1,101 @@
 .Showcase {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background-color: $color-navy;
-    align-items: center;
     color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background: $color-navy url(/img/showcase_back.jpg) no-repeat center center / cover;
+    text-align: center;
+
+    @include mq('tablet') {
+        padding-top: 7.5rem;
+        padding-bottom: 5rem;
+    }
+
+
+    &-title {
+        @include mq('tablet') {
+            font-size: 3em;
+        }
+    }
+
+
+    &-subtitle {
+        margin-top: 10px;
+        @include mq('tablet') {
+            font-size: 1.4em;
+        }
+    }
+
+    &-shortlink {
+        margin-top: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        a {
+            margin-left: 10px;
+            margin-right: 10px;
+            color: inherit;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
 }
 
 .Search {
+    text-align: left;
+    margin-top: 30px;
     background-color: $color-yellow;
-    padding: 40px;
+    padding: $gutter;
     box-shadow: 0 20px 40px rgba(black, .2);
+
+    @include mq('tablet') {
+        padding: 50px 30px;
+        margin-top: 50px;
+    }
+
     &-form {
         position: relative;
         display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        @include mq('tablet') {
+            flex-direction: row;
+        }
+        
+
+        &-item {
+            width: 100%;
+            @include mq('tablet') {
+                width: auto;
+            }
+            & + & {
+                margin-top: 10px;
+                @include mq('tablet') {
+                    flex-grow: 1;
+                    margin-top: 0;
+                    margin-left: 10px;
+                }
+            }
+        }
     }
-    .asd {
-        position: absolute;
-        right: 0;
+
+    .for-work {
+        font-size: $font-size-small;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+
+        @include mq('tablet') {
+            position: absolute;
+            top: calc(#{$finger-size} + 20px);
+            right: 0;
+        }
+    }
+
+    .checkbox {
+        margin-left: 15px;
     }
 }
